--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>form validatipn</title>
 </head>
 <body>
@@ -32,4 +33,5 @@
       </form>
       
 </body>
+<script src="main.js"></script>
 </html>
